--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 
           <ul class="features-menu list">
             <li class="cart-features">
+              <svg class="icon-strategy" width="64" height="64">
+                <use href="./images/sprite.svg#icon-antenna"></use>
+              </svg>
               <h3 class="el-title">Strategy</h3>
               <p class="el-description">
                 Our goal is to identify the business problem to walk away with
