--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
 
           <ul class="features-menu list">
             <li class="cart-features">
-              <svg class="icon-strategy" width="64" height="64">
-                <use href="./images/sprite.svg#icon-antenna"></use>
-              </svg>
+              <div class="icon-features">
+                <svg class="icon-strategy" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="el-title">Strategy</h3>
               <p class="el-description">
                 Our goal is to identify the business problem to walk away with
@@ -88,6 +90,11 @@
               </p>
             </li>
             <li class="cart-features">
+              <div class="icon-features">
+                <svg class="icon-strategy" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="el-title">Punctuality</h3>
               <p class="el-description">
                 Bring the key message to the brand's audience for the best price
@@ -95,6 +102,11 @@
               </p>
             </li>
             <li class="cart-features">
+              <div class="icon-features">
+                <svg class="icon-strategy" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="el-title">Diligence</h3>
               <p class="el-description">
                 Research and confirm brands that present the strongest digital
@@ -102,6 +114,11 @@
               </p>
             </li>
             <li class="cart-features">
+              <div class="icon-features">
+                <svg class="icon-strategy" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="el-title">Technologies</h3>
               <p class="el-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -162,28 +179,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -206,28 +223,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -248,28 +265,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -290,28 +307,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -321,17 +338,102 @@
           </ul>
         </div>
       </section>
+
+      <section class="section-team">
+        <div class="container">
+          <h2 class="title-item">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customer-list-item">
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon" width="41" height="47">
+                  <use href="./images/icons.svg#icon-la-co"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon" width="40" height="52">
+                  <use href="./images/icons.svg#icon-tagline"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon" width="44" height="41">
+                  <use href="./images/icons.svg#icon-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon" width="84" height="41">
+                  <use href="./images/icons.svg#icon-foster-peters"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon" width="63" height="45">
+                  <use href="./images/icons.svg#icon-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon" width="94" height="44">
+                  <use href="./images/icons.svg#icon-tag-line"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer class="address-footer">
-      <div class="container">
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-footer-cloud">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-div">
+        <div class="footer-logo-text">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-footer-cloud">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-div">
+          <p class="footer-text-social-media">Social media</p>
+          <ul class="social-media list">
+            <li class="social-list-item">
+              <a href="" class="social-media-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-media-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-media-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-media-link">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
