--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </div>
       </section>
 
-      <section class="section-team">
+      <section class="section-customers">
         <div class="container">
           <h2 class="title-item">Customers</h2>
           <ul class="customers-list list">
