--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <main>
       <!-- Hero -->
       <section class="hero">
-        <div class="container container-hero">
+        <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="modal-btn" type="button">Order Service</button>
         </div>
@@ -341,46 +341,46 @@
 
       <section class="section-customers">
         <div class="container">
-          <h2 class="title-item">Customers</h2>
+          <h2 class="title-customars">Customers</h2>
           <ul class="customers-list list">
             <li class="customer-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon" width="41" height="47">
+                <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-la-co"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customer-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon" width="40" height="52">
+                <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-tagline"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customer-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon" width="44" height="41">
+                <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customer-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon" width="84" height="41">
+                <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customer-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon" width="63" height="45">
+                <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customer-list-item">
               <a href="" class="customers-list-link">
-                <svg class="customers-list-icon" width="94" height="44">
+                <svg class="customers-list-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-tag-line"></use>
                 </svg>
               </a>
