--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
           <!-- Gallery -->
           <ul class="gallery list">
             <li class="cart-gallery">
-              <a class="link" href="">
+              <a class="link link-gallery" href="">
                 <img
                   src="./images/banking-app.jpg"
                   alt="Banking App Interface Concept"
@@ -98,7 +98,7 @@
               </a>
             </li>
             <li class="cart-gallery">
-              <a class="link" href="">
+              <a class="link link-gallery" href="">
                 <img
                   src="./images/cashless-payment.jpg"
                   alt="Cashless Payment"
@@ -111,7 +111,7 @@
               </a>
             </li>
             <li class="cart-gallery">
-              <a class="link" href="">
+              <a class="link link-gallery" href="">
                 <img
                   src="./images/meditation-app.jpg"
                   alt="Meditation App"
@@ -124,7 +124,7 @@
               </a>
             </li>
             <li class="cart-gallery">
-              <a class="link" href="">
+              <a class="link link-gallery" href="">
                 <img
                   src="./images/taxi-service.jpg"
                   alt="Taxi Service"
@@ -137,7 +137,7 @@
               </a>
             </li>
             <li class="cart-gallery">
-              <a class="link" href="">
+              <a class="link link-gallery" href="">
                 <img
                   src="./images/screen-illustrations.jpg"
                   alt="Screen Illustrations"
@@ -150,7 +150,7 @@
               </a>
             </li>
             <li class="cart-gallery">
-              <a class="link" href="">
+              <a class="link link-gallery" href="">
                 <img
                   src="./images/online-courses.jpg"
                   alt="Online Courses"
@@ -163,7 +163,7 @@
               </a>
             </li>
             <li class="cart-gallery">
-              <a class="link" href="">
+              <a class="link link-gallery" href="">
                 <img
                   src="./images/instagram-stories.jpg"
                   alt="Instagram Stories Concept"
@@ -176,7 +176,7 @@
               </a>
             </li>
             <li class="cart-gallery">
-              <a class="link" href="">
+              <a class="link link-gallery" href="">
                 <img
                   src="./images/organic-food.jpg"
                   alt="Organic Food"
@@ -189,7 +189,7 @@
               </a>
             </li>
             <li class="cart-gallery">
-              <a class="link" href="">
+              <a class="link link-gallery" href="">
                 <img
                   src="./images/fresh-coffee.jpg"
                   alt="Fresh Coffee"
